# ant-router

./: .gitignore  Cargo.toml  LICENSE  README.md  config.default.yaml  config.yaml  ground_truth_chat.json  ground_truth_tool_call.json  real_world_claude_code_failure_log.txt  run_model_diff.sh  run_python_tests.sh
docs/: ant_tool_calling.md  openrouter_tool_calling.md
logs/: recorded_log_grokwritefile.jsonl  recorded_log_stepfun_failed_writefile.jsonl
src/: config.rs  handlers.rs  lib.rs  logging.rs  main.rs  protocol.rs
src/middleware/: mod.rs  system_prompt.rs  system_prompt_test.rs  tool_enforcer.rs  tool_filter.rs
src/transformer/: mod.rs  request.rs  response.rs
tests/: config_test.rs  config_test_e2e.yaml  e2e_compat_test.rs  e2e_tool_calling.py  e2e_write_tool.py  integration_test.rs  logging_test.rs  middleware_test.rs  preprocess_test.rs  profile_config_test.rs  tool_audit.rs
tools/: model_diff.py  requirements.txt
