[package]
name = "anthropic-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["http2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
regex = "1"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
thiserror = "1"
futures = "0.3"
bytes = "1"
async-stream = "0.3"
pin-project = "1"

[dev-dependencies]
wiremock = "0.6"
